# demo-zkvm-taproot-address

./: Cargo.toml  README.md
contracts/: TaprootRegister.sol
methods/guest/: Cargo.toml
methods/guest/src/: lib.rs  main.rs
relay/examples/: callback_request.rs
script/: Deploy.s.sol
taproot-prover/: Cargo.toml
taproot-prover/src/: main.rs
